20250613_daily_arXiv_update

--- a/arxiv/2025_06_arxiv.html
+++ b/arxiv/2025_06_arxiv.html
@@ -104,6 +104,45 @@
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.05330">https://arxiv.org/pdf/2506.05330</a></span> Spinless and spinful charge excitations in moiré Fractional Chern Insulators (B. Andrei Bernevig, Nicolas Regnault)</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04356">https://arxiv.org/pdf/2506.04356</a></span> Intra-unit-cell singlet pairing mediated by altermagnetic fluctuations *** (Yi-Ming Wu, Yuxuan Wang, Rafael M. Fernandes)</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2309.04540">https://arxiv.org/pdf/2309.04540</a></span> Inhomogeneous Quantum Quenches of Conformal Field Theory with Boundaries (Shinsei Ryu)</p>
+<br>
+<p class="p1">20250609</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.05620">https://arxiv.org/abs/2506.05620</a></span> Magnetic Moir´e Systems: a review</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.05462">https://arxiv.org/abs/2506.05462</a></span> Probing quantum geometry with two-dimensional nonlinear optical spectroscopy (Paul Froese, Mark R. Hirsbrunner, Yong Baek Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20250610</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.07913">https://arxiv.org/abs/2506.07913</a></span> Disentangling contributions to longitudinal magnetoconductivity for Kramers-Weyl nodes (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.07870">https://arxiv.org/abs/2506.07870</a></span> Landau theory of the density wave transition in trilayer Ruddlesden-Popper nickelates</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.07688">https://arxiv.org/abs/2506.07688</a></span> Generalized Symmetries Phase Transitions with Local Quantum Fields (Po-Shen Hsin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.08000">https://arxiv.org/abs/2506.08000</a></span> Microscopic Mechanism of Anyon Superconductivity Emerging from Fractional Chern Insulators ***** (Fabian Pichler, Clemens Kuhlenkamp, Michael Knap, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.07318">https://arxiv.org/abs/2506.07318</a></span> Non-Abelian Magnon Gauge Interactions in Condensed Matter Physics ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.07361">https://arxiv.org/abs/2506.07361</a></span> What holes in superconductors reveal about superconductivity (J. E. Hirsch)</p>
+<p class="p2"><br></p>
+<p class="p1">20250611</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.08087">https://arxiv.org/abs/2506.08087</a></span> Emblems of pair density waves: dual identity of topological defects and their transport signatures (Eun-Ah Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.08204">https://arxiv.org/abs/2506.08204</a></span> Visualizing a Terahertz Superfluid Plasmon in a Two-Dimensional Superconductor (P. Kim, N. Gedik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.08664">https://arxiv.org/abs/2506.08664</a></span> Ramanujan, Landau and Casimir, divergent series : a physicist point of view</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.08175">https://arxiv.org/abs/2506.08175</a></span> Anomaly, Class Division, and Decoupling in Wealth Dynamics (Meesoon Ha, Hawoong Jeong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.08802">https://arxiv.org/abs/2506.08802</a></span> Path Integral Formalism for Quantum Open Systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.08402">https://arxiv.org/abs/2506.08402</a></span> Exciton condensation from level repulsion: application to bilayer graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.08867">https://arxiv.org/abs/2506.08867</a></span> Order-by-disorder in magnets with frustrated spin interactions - classical and large-S limits via the spin functional integral (Johannes Knolle)</p>
+<p class="p2"><br></p>
+<p class="p1">20250612</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.09880">https://arxiv.org/abs/2506.09880</a></span> Radon Transforms and the SYK model ***** (Michael Stone)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.09936">https://arxiv.org/abs/2506.09936</a></span> Repeated ancilla reuse for logical computation on a neutral atom quantum computer (Atom Computing, Inc., Microsoft Quantum)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.09889">https://arxiv.org/abs/2506.09889</a></span> Detecting (emergent) continuous symmetry of criticality via subsystem’s entanglement spectrum</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.09973">https://arxiv.org/abs/2506.09973</a></span> Evidence for Bose liquid from anomalous shot noise in nanojunctions of bad metal β-Ta ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.09127">https://arxiv.org/abs/2506.09127</a></span> “Symmetry-from-Anomaly” in Condensed Matter related Constructions ***** (Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.09156">https://arxiv.org/abs/2506.09156</a></span> Digital Quantum Simulation of the Kitaev Quantum Spin Liquid **** (Seongjun Park and Eun-Gook Moon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.09177">https://arxiv.org/abs/2506.09177</a></span> (2+1)d Lattice Models and Tensor Networks for Gapped Phases with Categorical Symmetry ***** (Kansei Inamura, Sheng-Jie Huang, Apoorv Tiwari, Sakura Scha ̈fer-Nameki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.09308">https://arxiv.org/abs/2506.09308</a></span> Quantum Algorithm Software for Condensed Matter Physics</p>
+<p class="p2"><br></p>
+<p class="p1">20250613</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.10792">https://arxiv.org/abs/2506.10792</a></span> Comment on “Electric conductivity of graphene: Kubo model versus a nonlocal quantum field theory model” (arXiv:2403.02279v3) **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.10071">https://arxiv.org/abs/2506.10071</a></span> Interacting Electronic Topology of Nonlocal Crystals (Titus Neupert)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.10308">https://arxiv.org/abs/2506.10308</a></span> Coupled Lindblad pseudomode theory for simulating open quantum systems (Zhen Huang, Gunhee Park, Garnet Kin-Lic Chan, Lin Lin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.10938">https://arxiv.org/abs/2506.10938</a></span> From Fractionalization to Chiral Topological Superconductivity in Flat Chern Band ***** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.10076">https://arxiv.org/abs/2506.10076</a></span> Entanglement Holography in Quantum Phases via Twisted R ́enyi-N Correlators ***** (Pablo Sala, Frank Pollmann, Masaki Oshikawa, Yizhi You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2405.01332">https://arxiv.org/abs/2405.01332</a></span> How Much Entanglement Is Needed for Quantum Error Correction? ***** (Sergey Bravyi, Dongjin Lee, Zhi Li, Beni Yoshida)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
