20250622_daily_arXiv_update

--- a/arxiv/2025_06_arxiv.html
+++ b/arxiv/2025_06_arxiv.html
@@ -44,7 +44,7 @@
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20250602</p>
-<p class="p2"><a href="https://arxiv.org/pdf/2505.24432">https://arxiv.org/pdf/2505.24432</a><span class="s1"> 50 years of spin glass theory</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2505.24432">https://arxiv.org/pdf/2505.24432</a></span> 50 years of spin glass theory</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2505.23853">https://arxiv.org/pdf/2505.23853</a></span> Roughening and dynamics of an electric flux string in a (2+1)D lattice gauge theory</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2503.07750">https://arxiv.org/pdf/2503.07750</a></span> BCS-like formula for Tc does not necessarily imply BCS pairing mechanism *** (Yuxuan Wang, Andrey V. Chubukov)</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2505.24130">https://arxiv.org/pdf/2505.24130</a></span> Instantons and topological order in two-leg electron ladders: A universality class</p>
@@ -86,7 +86,7 @@
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04221">https://arxiv.org/pdf/2506.04221</a></span> Topological Mixed States: Axiomatic Approaches and Phases of Matter ***** (Tai-Hsuan Yang, Bowen Shi, Jong Yeon Lee)</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.03247">https://arxiv.org/pdf/2506.03247</a></span> Tensor Renormalization Group Meets Computer Assistance</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04200">https://arxiv.org/pdf/2506.04200</a></span> Entanglement renormalization circuits for 2d Gaussian Fermion States (Andrew C. Potter)</p>
-<p class="p2"><a href="https://arxiv.org/pdf/2506.03261">https://arxiv.org/pdf/2506.03261</a><span class="s1"> Altermagnetic polarons</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.03261">https://arxiv.org/pdf/2506.03261</a></span> Altermagnetic polarons</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.03262">https://arxiv.org/pdf/2506.03262</a></span> Spin-glass state in nickelate superconductors (Steven A. Kivelson, Harold Hwang, Aharon Kapitulnik)</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04181">https://arxiv.org/pdf/2506.04181</a></span> Exactly solvable spin liquids in Kitaev bilayers and moir ́e superlattices (Onur Erten)</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04016">https://arxiv.org/pdf/2506.04016</a></span> Dreaming up scale invariance via inverse renormalization group</p>
@@ -94,7 +94,7 @@
 <p class="p1">20250606</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.05244">https://arxiv.org/pdf/2506.05244</a></span> How to Train Your Dragon: Quantum Neural Networks (Alex Kamenev)</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04335">https://arxiv.org/pdf/2506.04335</a></span> Emergent gravity and gravitational lensing in quantum materials (Liang Fu)</p>
-<p class="p2"><a href="https://arxiv.org/pdf/2506.04343">https://arxiv.org/pdf/2506.04343</a><span class="s1"> L´evy Sachdev-Ye-Kitaev Model</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04343">https://arxiv.org/pdf/2506.04343</a></span> L´evy Sachdev-Ye-Kitaev Model</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04637">https://arxiv.org/pdf/2506.04637</a></span> Entanglement cost hierarchies in quantum fragmented mixed states</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.04792">https://arxiv.org/pdf/2506.04792</a></span> Kondo effect under arbitrary spin-momentum locking</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/pdf/2506.05131">https://arxiv.org/pdf/2506.05131</a></span> DISCRETE QUANTUM SYSTEMS FROM TOPOLOGICAL FIELD THEORY</p>
@@ -143,6 +143,29 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.10938">https://arxiv.org/abs/2506.10938</a></span> From Fractionalization to Chiral Topological Superconductivity in Flat Chern Band ***** (Liang Fu)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.10076">https://arxiv.org/abs/2506.10076</a></span> Entanglement Holography in Quantum Phases via Twisted R ́enyi-N Correlators ***** (Pablo Sala, Frank Pollmann, Masaki Oshikawa, Yizhi You)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2405.01332">https://arxiv.org/abs/2405.01332</a></span> How Much Entanglement Is Needed for Quantum Error Correction? ***** (Sergey Bravyi, Dongjin Lee, Zhi Li, Beni Yoshida)</p>
+<br>
+<p class="p1">20250616</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.11187">https://arxiv.org/abs/2506.11187</a></span> Roughening Transition in Quantum Circuits (Hyunsoo Ha, David A. Huse, Grace M. Sommers)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.11211">https://arxiv.org/abs/2506.11211</a></span> Anyon dispersion from non-uniform magnetic field on the sphere (Mina-Lou Schleith, Tomohiro Soejima, Eslam Khalaf)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.11288">https://arxiv.org/abs/2506.11288</a></span> Bulk Excitations of Invertible Phases (Wenjie Ji, David T. Stephen, Michael Levin, Xie Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.11952">https://arxiv.org/abs/2506.11952</a></span> Quantum Critical Eliashberg Theory ***** (Ilya Esterlis, J¨org Schmalian)</p>
+<p class="p2"><br></p>
+<p class="p1">20250617</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.12380">https://arxiv.org/abs/2506.12380</a></span> Distinguishing features of longitudinal magnetoconductivity for a Rarita-Schwinger-Weyl node (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.12133">https://arxiv.org/abs/2506.12133</a></span> Universal Spreading of Nonstabilizerness and Quantum Transport</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.13631">https://arxiv.org/abs/2506.13631</a></span> Anomalous Superfluid Density in Pair-Density-Wave Superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.13721">https://arxiv.org/abs/2506.13721</a></span> Catalogue of chiral phonon materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.13096">https://arxiv.org/abs/2506.13096</a></span> Diagnosing 2D symmetry protected topological states via mixed state anomaly</p>
+<p class="p2"><br></p>
+<p class="p1">20250618</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.13806">https://arxiv.org/abs/2506.13806</a></span> A CENTURY OF BOSE-EINSTEIN CONDENSATION</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.14747">https://arxiv.org/abs/2506.14747</a></span> Quantum simulation of fermionic non-Abelian lattice gauge theories in (2+1)D with built-in gauge protection</p>
+<p class="p2"><br></p>
+<p class="p1">20250619</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.14904">https://arxiv.org/abs/2506.14904</a></span> Free real scalar CFT on fuzzy sphere: spectrum, algebra and wavefunction ansatz (Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.15516">https://arxiv.org/abs/2506.15516</a></span> Unconventional Spin Dynamics and Supersolid Excitations in the Triangular-Lattice XXZ Model (Rafael Flores-Calder ́on, Roderich Moessner, Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.03266">https://arxiv.org/abs/2506.03266</a></span> Fast offline decoding with local message-passing automata (Ethan Lake)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.05234">https://arxiv.org/abs/2506.05234</a></span> 2024 TASI Lectures: A Dark Matter Primer</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
