20250627_daily_arXiv_preprint_CV_update

--- a/arxiv/2025_06_arxiv.html
+++ b/arxiv/2025_06_arxiv.html
@@ -166,6 +166,40 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.15516">https://arxiv.org/abs/2506.15516</a></span> Unconventional Spin Dynamics and Supersolid Excitations in the Triangular-Lattice XXZ Model (Rafael Flores-Calder ́on, Roderich Moessner, Frank Pollmann)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.03266">https://arxiv.org/abs/2506.03266</a></span> Fast offline decoding with local message-passing automata (Ethan Lake)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.05234">https://arxiv.org/abs/2506.05234</a></span> 2024 TASI Lectures: A Dark Matter Primer</p>
+<br>
+<p class="p1">20250623</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.15769">https://arxiv.org/abs/2506.15769</a></span> Breakdown of the thermodynamic limit in quantum spin and dimer models (Victor Galitski)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.16068">https://arxiv.org/abs/2506.16068</a></span> Superfluid dome in the spatially modulated two-dimensional XY model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.16503">https://arxiv.org/abs/2506.16503</a></span> Mixed phases in a Fermi–Hubbard model describing altermagnetism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.16508">https://arxiv.org/abs/2506.16508</a></span> Superconductivity in a Chern band: effect of time-reversal-symmetry breaking on superconductivity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.16907">https://arxiv.org/abs/2506.16907</a></span> A Josephson wormhole in coupled superconducting Yukawa-SYK metals</p>
+<p class="p2"><br></p>
+<p class="p1">20250624</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.18121">https://arxiv.org/abs/2506.18121</a></span> Measurement induced scrambling and emergent symmetries in random circuits (Haifeng Tang, Hong-Yi Wang, Zhong Wang, Xiao-Liang Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.17386">https://arxiv.org/abs/2506.17386</a></span> Quantum Geometric Origin of the Intrinsic Nonlinear Hall Effect (Laura Classen, Andreas P. Schnyder)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.17394">https://arxiv.org/abs/2506.17394</a></span> Tunable anyonic permeability across Z2 spin liquid junctions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.17408">https://arxiv.org/abs/2506.17408</a></span> Raman scattering from moir´e phonons (Rafael M. Fernandes,3, 4 and Natalia B. Perkins)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2506.18666">https://arxiv.org/abs/2506.18666</a><span class="s2"> Advanced linear algebra</span></p>
+<p class="p2"><br></p>
+<p class="p1">20250625</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.19727">https://arxiv.org/abs/2506.19727</a></span> Moir ́e Collapse and Luttinger Liquids In Twisted Anisotropic Homobilayers</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.19771">https://arxiv.org/abs/2506.19771</a></span> Interplay between Symmetry Breaking and Interactions in a Symmetry Protected Topological Phase</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.18969">https://arxiv.org/abs/2506.18969</a></span> Bootstrapping Flat-band Superconductors: Rigorous Lower Bounds on Superfluid Stiffness (Qiang Gao, Zhaoyu Han, Eslam Khalaf)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.18973">https://arxiv.org/abs/2506.18973</a></span> High spin, low spin or gapped spins: magnetism in the bilayer nickelates ***** (Hanbit Oh, Yi-Ming Wu, Julian May-Mann, Yijun Yu, Harold Y. Hwang, Ya-Hui Zhang, S. Raghu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.18978">https://arxiv.org/abs/2506.18978</a></span> Pseudo-chiral phonon splitting from octupolar magnetic order (Arun Paramekanti)</p>
+<p class="p2"><br></p>
+<p class="p1">20250626</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.20660">https://arxiv.org/abs/2506.20660</a></span> Continuous operation of a coherent 3,000-qubit system (Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.20661">https://arxiv.org/abs/2506.20661</a></span> Architectural mechanisms of a universal fault-tolerant quantum computer (Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.20500">https://arxiv.org/abs/2506.20500</a></span> Comparison between Causal and Acausal Diffusion: a Schwinger-Keldysh Effective Field Theory Perspective</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.19908">https://arxiv.org/abs/2506.19908</a></span> Geometrically Frustrated Quadrupoles on the Pyrochlore Lattice and Generalized Spin Liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.20611">https://arxiv.org/abs/2506.20611</a></span> Floquet operator dynamics and orthogonal polynomials on the unit circle (Aditi Mitra)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.19903">https://arxiv.org/abs/2506.19903</a></span> Pair density modulation from glide symmetry breaking and nematic superconductivity (Patrick A. Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20250627</p>
+<p class="p1"><b><span class="s1"><a href="https://arxiv.org/abs/2506.20710">https://arxiv.org/abs/2506.20710</a></span> Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality ****** (SangEun Han, Igor F. Herbut)</b></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.21428">https://arxiv.org/abs/2506.21428</a></span> Imaginary Time Formalism for Causal Nonlinear Response Functions (Barry Bradlyn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.20735">https://arxiv.org/abs/2506.20735</a></span> Bosonized theory of de Haas-van Alphen quantum oscillation in Fermi liquids ***** (Yuxuan Wang)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
