--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	</style>-->
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
-	--><li><b>[Mar. 2025]</b> I have given a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/events/MAR-J25" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking" (2025/03/18 03:00 PM, Room 251A (Level 2))</a> at APS march meeting 2025, Anaheim, California, USA!
+	-->
+			<li><b>[Jun. 2025]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2506.20710" style="font-style: italic;">"Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality (arXiv:2506.20710)"</a> has been posted on arXiv!
+			</li>
+			<li><b>[Mar. 2025]</b> I have given a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/events/MAR-J25" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking" (2025/03/18 03:00 PM, Room 251A (Level 2))</a> at APS march meeting 2025, Anaheim, California, USA!
 			</li><!--<li><b>[Mar. 2025]</b> I will give a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://summit.aps.org/events/MAR-J25" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking" (2025/03/18 03:00 PM, Room 251A (Level 2))</a> at APS march meeting 2025, Anaheim, California, USA!
 			</li>-->
 			<li><b>[Mar. 2025]</b> My paper <a href="htthttps://link.aps.org/doi/10.1103/PhysRevB.111.115131" style="font-style: italic;">"Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticalit"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
@@ -113,22 +116,22 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 			<li><b>[Jan. 2025]</b> I have been Korea for the month of January 2025.
 			</li>
 			<li><b>[Nov. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2411.16842" style="font-style: italic;">"Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality (arXiv:2411.16842)"</a> has been posted on arXiv!
-						</li>
+			</li>
 			<li><b>[Nov. 2024]</b> I have been visiting the Institute for Solid State Physics, the University of Tokyo in Japan from November 18th 2024 to early January 2025. And I plan to visit Korea for the month of January 2025.
 			</li>
 			<li><b>[Sep. 2024]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.110.125131" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a regular article</span>.
 			</li>
 			<li><b>[Sep. 2024]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prb/accepted/8407bQf8G3213e363403613769cb4bdd09b5490d1" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking (arXiv:2406.01681)"</a> has been accepted on <span style="font-style: italic;">Physical Review B</span>!
-		</li>
-		<li><b>[Jun. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2406.01681" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking (arXiv:2406.01681)"</a> has been posted on arXiv!
-				</li>
-		<li><b>[May 2024]</b> My paper <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.109.096026" style="font-style: italic;">"Spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model"</a> has been published in <span style="font-style: italic;">Physical Review D</span> as a regular article</span>.
 			</li>
-			<li><b>[Apr. 2024]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prd/accepted/5b078QedD9b1fd30e5965265f634663c71d33dfa2" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been accepted on <span style="font-style: italic;">Physical Review D</span>!
-		</li>
 		</ul>
 <details class="description" close><summary data-open="[Close]" data-close="Past News"></summary>
 	<ul>
+			<li><b>[Jun. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2406.01681" style="font-style: italic;">"Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO}(N)$ spontaneous symmetry breaking (arXiv:2406.01681)"</a> has been posted on arXiv!
+				</li>
+			<li><b>[May 2024]</b> My paper <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.109.096026" style="font-style: italic;">"Spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model"</a> has been published in <span style="font-style: italic;">Physical Review D</span> as a regular article</span>.
+			</li>
+			<li><b>[Apr. 2024]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prd/accepted/5b078QedD9b1fd30e5965265f634663c71d33dfa2" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been accepted on <span style="font-style: italic;">Physical Review D</span>!
+			</li>
 		<li><b>[Mar. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2403.09627" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been posted on arXiv!
 				</li>
 		<li><b>[Mar. 2024]</b> I have given a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://meetings.aps.org/Meeting/MAR24/Session/A07.5" style="font-style: italic;">"Bosonization of Non-Fermi Liquids" (2023/03/04 08:48 AM, Room L100H)</a> at APS march meeting 2024, Minneapolis, Minnesota, USA!
@@ -159,7 +162,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
 	</details><br>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20250312_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2025/03/12)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20250627_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2025/06/27)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
