--- a/arxiv/2025_06_arxiv.html
+++ b/arxiv/2025_06_arxiv.html
@@ -179,7 +179,7 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.17386">https://arxiv.org/abs/2506.17386</a></span> Quantum Geometric Origin of the Intrinsic Nonlinear Hall Effect (Laura Classen, Andreas P. Schnyder)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.17394">https://arxiv.org/abs/2506.17394</a></span> Tunable anyonic permeability across Z2 spin liquid junctions</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.17408">https://arxiv.org/abs/2506.17408</a></span> Raman scattering from moir´e phonons (Rafael M. Fernandes,3, 4 and Natalia B. Perkins)</p>
-<p class="p3"><a href="https://arxiv.org/abs/2506.18666">https://arxiv.org/abs/2506.18666</a><span class="s2"> Advanced linear algebra</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.18666">https://arxiv.org/abs/2506.18666</a></span> Advanced linear algebra</p>
 <p class="p2"><br></p>
 <p class="p1">20250625</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.19727">https://arxiv.org/abs/2506.19727</a></span> Moir ́e Collapse and Luttinger Liquids In Twisted Anisotropic Homobilayers</p>
@@ -197,7 +197,7 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.19903">https://arxiv.org/abs/2506.19903</a></span> Pair density modulation from glide symmetry breaking and nematic superconductivity (Patrick A. Lee)</p>
 <p class="p2"><br></p>
 <p class="p1">20250627</p>
-<p class="p1"><b><span class="s1"><a href="https://arxiv.org/abs/2506.20710">https://arxiv.org/abs/2506.20710</a></span> Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality ****** (SangEun Han, Igor F. Herbut)</b></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.20710">https://arxiv.org/abs/2506.20710</a></span> <b>Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality ****** (SangEun Han, Igor F. Herbut)</b></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.21428">https://arxiv.org/abs/2506.21428</a></span> Imaginary Time Formalism for Causal Nonlinear Response Functions (Barry Bradlyn)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2506.20735">https://arxiv.org/abs/2506.20735</a></span> Bosonized theory of de Haas-van Alphen quantum oscillation in Fermi liquids ***** (Yuxuan Wang)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
