--- a/index.html
+++ b/index.html
@@ -192,6 +192,21 @@ Articles related to my works:
 			  <div class="sign3" style="display: inline-block;">W</div>
 			  <div class="sign1" style="display: inline-block;float: left;">N</div>
 			  <div class="sign2" style="display: inline-block;float: left;">E</div>
+			  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2506.20710" style="text-decoration:none;color:var(--font-color)">"Beyond one-loop: higher-order effects on Gross-Neveu-Yukawa tensorial criticality"</a></span>
+							<span class="cvperiod"></span></div>
+							<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b> and <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="text-decoration:none;color:var(--font-color)">Igor F. Herbut</a><br>
+								<a href="https://arxiv.org/abs/2506.20710">arXiv:2506.20710</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+			  <label>
+			    <input type="checkbox">
+			  </label>
+			</div> We study the Gross-Neveu-Yukawa field theory for the  SO($N$) symmetric traceless rank-two tensor order parameter coupled to Majorana fermions using the $\epsilon$-expansion around upper critical dimensions of $3+1$ to two loops. Previously we established in the one-loop calculation that the theory does not exhibit a critical fixed point for $N \geq 4$, but that nevertheless the stable fixed point inevitably emerges at a large number of fermion flavors $N_f$.  For $N_f < N_{f,c1} \approx N/2$, no critical fixed point exists; for $N_{f,c1} < N_f < N_{f,c2}$, a real critical fixed point emerges from the complex plane but fails to satisfy the additional stability conditions necessary for a continuous phase transition; and finally only for $N_f > N_{f,c2} \approx N$, the fixed point satisfies the stability conditions as well. In the present  work we compute the $O(\epsilon)$ (two-loop) corrections to the critical flavour numbers $N_{f,c1} $ and $N_{f,c2}$. Most importantly, we observe a sharp decrease in $N_{f,c2}$ from its one-loop value, which brings it closer to the point $N_f =1$ relevant to the standard Gross-Neveu model. Some three-loop results are also presented and discussed.
+			</span></details></div>
+					</li>
+					<li><div class="paper_title" style="display: flex;">
+					<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+			  <div class="sign3" style="display: inline-block;">W</div>
+			  <div class="sign1" style="display: inline-block;float: left;">N</div>
+			  <div class="sign2" style="display: inline-block;float: left;">E</div>
 			  <div class="shadow"></div></div>&nbsp<a href="https://link.aps.org/doi/10.1103/PhysRevB.111.115131" style="text-decoration:none;color:var(--font-color)">"
 Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality
 "</a> <div class="bouncing-text" style="display: inline-block;">
@@ -248,22 +263,7 @@ Gross-Neveu-Yukawa theory of $\text{SO}(2N)\rightarrow\text{SO}(N)\times\text{SO
 			<!-- -->
 		<!-- -->
 				<li><div class="paper_title" style="display: flex;">
-				<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
-		  <div class="sign3" style="display: inline-block;">W</div>
-		  <div class="sign1" style="display: inline-block;float: left;">N</div>
-		  <div class="sign2" style="display: inline-block;float: left;">E</div>
-		  <div class="shadow"></div></div>&nbsp<a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.109.096026" style="text-decoration:none;color:var(--font-color)">"Spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model"</a> <div class="bouncing-text" style="display: inline-block;">
-		  <div class="Psign9" style="display: inline-block;">D</div>
-		  <div class="Psign1" style="display: inline-block;float: left;">P</div>
-		  <div class="Psign2" style="display: inline-block;float: left;">U</div>
-		  <div class="Psign3" style="display: inline-block;float: left;">B</div>
-		  <div class="Psign4" style="display: inline-block;float: left;">L</div>
-		  <div class="Psign5" style="display: inline-block;float: left;">I</div>
-		  <div class="Psign6" style="display: inline-block;float: left;">S</div>
-		  <div class="Psign7" style="display: inline-block;float: left;">H</div>
-		  <div class="Psign8" style="display: inline-block;float: left;">E</div>
-		  <div class="shadow"></div>
-							</span>
+				<span class="cvitem"><a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.109.096026" style="text-decoration:none;color:var(--font-color)">"Spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model"</a></span>
 						<span class="cvperiod"></span></div>
 						<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b> and <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="text-decoration:none;color:var(--font-color)">Igor F. Herbut</a><br>
 					<a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.109.096026">Phys. Rev. D <b>109</b>, 096026 (2024)</a> (<a href="https://arxiv.org/abs/2403.09627">arXiv:2403.09627</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
